@@ -18,6 +18,7 @@ ifndef KFREEBSD_SOURCE
   else
     KFREEBSD_HEADERS := /usr/$(DEB_HOST_GNU_TYPE)/include
   endif
+  KFREEBSD_ARCH_HEADERS := /usr/include/$(DEB_HOST_MULTIARCH)
 else
   KFREEBSD_HEADERS := $(KFREEBSD_SOURCE)/sys
 endif
@@ -29,17 +30,25 @@ KERNEL_HEADER_DIR = $(stamp)mkincludedir
 $(stamp)mkincludedir:
 	rm -rf debian/include
 	mkdir debian/include
-	for file in bsm net netatalk netipx nfs osreldate.h sys x86 vm ; do \
-	    if test -e $(KFREEBSD_HEADERS)/$$file ; then \
+
+	# Link to any headers found at the new multiarch location,
+	# otherwise look for them in the old locations
+	for file in bsm machine machine-amd64 machine-i386 net netatalk netipx nfs osreldate.h x86 vm ; do \
+	    if test -e $(KFREEBSD_ARCH_HEADERS)/$$file ; then \
+	        ln -s $(KFREEBSD_ARCH_HEADERS)/$$file debian/include ; \
+	    elif test -e $(KFREEBSD_HEADERS)/$$file ; then \
 	        ln -s $(KFREEBSD_HEADERS)/$$file debian/include ; \
 	    fi ; \
 	done
 
-        # Link all machine directories.  We can't just link machine
-        # because of explicit references to <machine-amd64/*> and
-	# <machine-i386/*>.
-	find $(KFREEBSD_HEADERS) -maxdepth 1 -xtype d -name machine\* \
-		-exec ln -s '{}' debian/include ';'
+	mkdir -p debian/include/sys
+	# Link to any headers found in the old locations first
+	find $(KFREEBSD_HEADERS)/sys -mindepth 1 \
+		-exec ln -sf '{}' debian/include/sys ';'
+	# Link to any headers found at the new multiarch location,
+	# replacing any existing links
+	find $(KFREEBSD_ARCH_HEADERS)/sys -mindepth 1 \
+		-exec ln -sf '{}' debian/include/sys ';'
 
 	# To make configure happy if libc0.1-dev is not installed.
 	touch debian/include/assert.h
