@@ -32,6 +32,10 @@ glibc (2.21-0experimental2) UNRELEASED; urgency=medium
   * libc6.1.symbols.alpha: remove invoke_dynamic_linker from libpcprofile.so.
     It has disappeared, but it is a private library.
 
+  [ Steven Chamberlain ]
+  * sysdeps/kfreebsd.mk: find kfreebsd-kernel-headers in multiarch path.
+    Closes: #672774, #798064.
+
   [ Helmut Grohne ]
   * Fix some issues with stage 1.  Closes: #797831.
 
